--- a/michaelbayo.uk/src/App.css
+++ b/michaelbayo.uk/src/App.css
@@ -564,12 +564,12 @@ nav.navbar {
   }
   .contact form button {
     font-weight: 700;
-    color: #000;
-    background-color: #fff;
+    color: #ffffff;
+    background: linear-gradient(90.21deg, #bcbcbc -5.91%, #5f32b2 111.58%);
     padding: 14px 48px;
     font-size: 18px;
     margin-top: 25px;
-    border-radius: 0;
+    border-radius: 20px;
     position: relative;
     transition: 0.3s ease-in-out;
   }
@@ -582,7 +582,8 @@ nav.navbar {
   }
   .contact form button::before {
     content: "";
-    background: #121212;
+    background: #ffffff;
+    border-radius: 20px; 
     width: 0;
     height: 100%;
     position: absolute;
